--- a/gui/detalles/detalleLiquidacion.ui
+++ b/gui/detalles/detalleLiquidacion.ui
@@ -22,6 +22,14 @@
    </property>
    <item row="1" column="0" colspan="3">
     <widget class="QStackedWidget" name="stackedWidget">
+     <property name="font">
+      <font>
+       <family>Calibri</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
      <widget class="QWidget" name="page"/>
      <widget class="QWidget" name="page_2"/>
     </widget>
@@ -43,102 +51,34 @@ background-color: #F8F7F6
       <property name="bottomMargin">
        <number>5</number>
       </property>
-      <item row="0" column="6">
-       <widget class="QPushButton" name="pushButton_activos">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="font">
-         <font>
-          <family>Arial</family>
-          <pointsize>9</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="styleSheet">
-         <string notr="true"/>
-        </property>
-        <property name="text">
-         <string>ACTIVOS</string>
-        </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>../iconos/muni.png</normaloff>../iconos/muni.png</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>20</width>
-          <height>20</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="font">
-         <font>
-          <family>Arial</family>
-          <pointsize>9</pointsize>
-          <weight>50</weight>
-          <bold>false</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>Seleccione una opción de Liquidación:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="4">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="0" column="3">
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="0" column="7">
+      <item row="0" column="5">
        <widget class="QPushButton" name="pushButton_jubilados">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="font">
-         <font>
-          <family>Arial</family>
-          <pointsize>9</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>35</height>
+         </size>
         </property>
         <property name="styleSheet">
-         <string notr="true"/>
+         <string notr="true">#pushButton_jubilados{
+background-color:#cc9900;
+color: #FFFFFF;
+border-radius: 10px;
+}
+
+#pushButton_jubilados:hover{
+background-color: #997300;
+color: #FFFFFF;
+}</string>
         </property>
         <property name="text">
-         <string>JUBILADOS</string>
+         <string>Jubilados y Pensionados</string>
         </property>
         <property name="icon">
          <iconset>
@@ -152,8 +92,64 @@ background-color: #F8F7F6
         </property>
        </widget>
       </item>
-      <item row="0" column="5">
-       <spacer name="horizontalSpacer_3">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="font">
+         <font>
+          <family>Calibri</family>
+          <pointsize>12</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Seleccione una opción de Liquidación:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="4">
+       <widget class="QPushButton" name="pushButton_activos">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">#pushButton_activos{
+background-color:#33cccc;
+color: #FFFFFF;
+border-radius: 10px;
+}
+
+#pushButton_activos:hover{
+background-color: #29a3a3;
+color: #FFFFFF;
+}</string>
+        </property>
+        <property name="text">
+         <string>Trabajadores Activos</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>../iconos/muni.png</normaloff>../iconos/muni.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
+       <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
