--- a/gui/listas/listaAfiliados.ui
+++ b/gui/listas/listaAfiliados.ui
@@ -435,8 +435,8 @@
       <spacer name="horizontalSpacer">
        <property name="font">
         <font>
-         <family>Arial</family>
-         <pointsize>9</pointsize>
+         <family>Calibri</family>
+         <pointsize>12</pointsize>
          <weight>75</weight>
          <bold>true</bold>
         </font>
@@ -493,8 +493,8 @@
        </property>
        <property name="font">
         <font>
-         <family>Arial</family>
-         <pointsize>10</pointsize>
+         <family>Calibri</family>
+         <pointsize>12</pointsize>
          <weight>75</weight>
          <bold>true</bold>
         </font>
@@ -516,10 +516,16 @@
      <item row="0" column="1">
       <widget class="QPushButton" name="btn_nuevo">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>160</width>
+         <height>40</height>
+        </size>
        </property>
        <property name="maximumSize">
         <size>
@@ -529,17 +535,24 @@
        </property>
        <property name="font">
         <font>
-         <family>Arial</family>
-         <pointsize>9</pointsize>
-         <weight>75</weight>
-         <bold>true</bold>
+         <family>MS Shell Dlg 2</family>
+         <pointsize>8</pointsize>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">#btn_nuevo{
+background-color:#005c99;
+color: #FFFFFF;
+border-radius: 10px;
+}
+
+#btn_nuevo:hover{
+background-color:#004d80;
+color: #FFFFFF;
+}</string>
        </property>
        <property name="text">
-        <string>Ingresar AFILIADO (Ctrl+N)</string>
+        <string>Ingresar AFILIADO</string>
        </property>
        <property name="icon">
         <iconset>
@@ -603,8 +616,8 @@
        </property>
        <property name="font">
         <font>
-         <family>Arial</family>
-         <pointsize>10</pointsize>
+         <family>Calibri</family>
+         <pointsize>12</pointsize>
          <weight>75</weight>
          <bold>true</bold>
         </font>
