--- a/gui/login/ingreso_sistema.ui
+++ b/gui/login/ingreso_sistema.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>621</width>
-    <height>347</height>
+    <width>625</width>
+    <height>273</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>625</width>
+    <height>273</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>625</width>
+    <height>273</height>
+   </size>
+  </property>
+  <property name="sizeIncrement">
+   <size>
+    <width>625</width>
+    <height>273</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -122,13 +140,6 @@
    </item>
    <item row="9" column="0" colspan="4">
     <widget class="QLabel" name="label_4">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
      <property name="text">
       <string>Sindicato de Trabajadores Municipales de Merlo       </string>
      </property>
